plugins {
    id 'java'
    id 'application'
//    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}
/**
 * JVM ARGS
 -XX:+UseG1GC
 -Xms100m
 -Xmx300m
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:MinHeapFreeRatio=1
 -XX:MaxHeapFreeRatio=1
 */
//applicationDefaultJvmArgs = ["-XX:+UseShenandoahGC", "-XX:+UnlockExperimentalVMOptions"]
//applicationDefaultJvmArgs = ["-Xmx548m","-XX:+IgnoreUnrecognizedVMOptions"]
mainClassName = 'app.MainClass'
compileJava.options.encoding = 'UTF-8'
compileJava.sourceCompatibility = '21'
compileJava.targetCompatibility = '21'
//java  myApplication
group 'com.aphrodite'
version '1.0.0'

//javafx {
//    version = "19"
//    modules = [ 'javafx.controls', 'javafx.media']
//}

repositories {
//    maven { url 'https://jitpack.io' }
    mavenCentral()
}


sourceSets {
    main {
        java {
            srcDirs = ['src/main/java', 'src/gen/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}


dependencies {
    implementation 'org.jetbrains:annotations:23.0.0'


    //SLF4j
    implementation 'org.slf4j:slf4j-simple:2.0.3'


    //JAudioTagger
    implementation 'org.jaudiotagger:jaudiotagger:2.0.1'

    //GUAVA
    implementation("com.google.guava:guava:31.1-jre")


    //FREEDESKTOP DBUS
    // https://mvnrepository.com/artifact/com.github.hypfvieh/dbus-java
    implementation 'com.github.hypfvieh:dbus-java:3.3.2'

//    implementation 'com.github.hypfvieh:dbus-java-core:4.3.0'
//    implementation 'com.github.hypfvieh:dbus-java-transport-jnr-unixsocket:4.3.0'
//    implementation 'com.github.hypfvieh:dbus-java-transport-native-unixsocket:4.3.0'
//    implementation 'com.github.hypfvieh:dbus-java-material.utils:4.3.0'
    //GSTREAMER
    implementation 'org.freedesktop.gstreamer:gst1-java-core:1.4.0'

    //GSTREAMER SWING
    implementation 'org.freedesktop.gstreamer:gst1-java-swing:0.9.0'

    //GSON
    implementation 'com.google.code.gson:gson:2.8.9'




    /*Below libraries are used by Material Library*/
    //Timing framework
    implementation 'net.java.dev.timingframework:timingframework:1.0'
    //Jetbrains annotations
    implementation 'org.jetbrains:annotations:23.0.0'
    //SLF4j
    implementation 'org.slf4j:slf4j-simple:2.0.3'
    //MIGLAYOUT
    implementation 'com.miglayout:miglayout-swing:11.0'

    //JhLabs filters
    implementation 'com.jhlabs:filters:2.0.235-1'

    //JNA
    implementation 'net.java.dev.jna:jna:5.12.1'
    implementation 'net.java.dev.jna:jna-platform:5.12.1'

    //IKONLI
    implementation 'org.kordamp.ikonli:ikonli-core:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-fluentui-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-swing:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-bootstrapicons-pack:12.3.1'
    /*All libraries below are required by JTheme Detector by Dansoftware*/
    //JFA
    implementation ('de.jangassen:jfa:1.2.0') {
        exclude group: 'net.java.dev.jna', module: 'jna' // different jna version
    }

    //OSHI
    implementation 'com.github.oshi:oshi-core:5.8.6'

    implementation 'io.github.g00fy2:versioncompare:1.4.1'


}
tasks.register('printSourceSetInformation') {
    doLast {
        sourceSets.each { srcSet ->
            println "[" + srcSet.name + "]"
            print "-->Source directories: " + srcSet.allJava.srcDirs + "\n"
            print "-->Output directories: " + srcSet.output.classesDirs.files + "\n"
            println ""
        }
    }
}
shadowJar {
    mergeServiceFiles()
}